Bug 1792722 - Fix balanced heap limit calculation r=sfink

This should limit heap size to some multiple of the previous size. |f| is a
size in bytes and should not be multiplied by W.

Differential Revision: https://phabricator.services.mozilla.com/D165013